# slice-string

./: Cargo.toml
src/: lib.rs  ufmt.rs
