[package]
name = "slice-string"
version = "0.7.0"
edition = "2021"
description = "A String backed by a slice"
license = "MIT"
repository = "https://github.com/quartiq/slice-string"
keywords = ["string", "vec", "no_std", "no-std"]

[dependencies]
tinyvec = "1.6.0"
ufmt-write = { version = "0.1.0", optional = true }

[dev-dependencies]
ufmt = { version = "0.2.0" }

[features]
default = []
ufmt-impl = ["dep:ufmt-write"]
